# fast_base_convert

./: .gitignore  Cargo.toml  README.md  debug_optimized.rs  suggests.md  test_debug.rs
.github/workflows/: deploy.yml
benches/: base_convert_bench.rs  simple_bench.rs
examples/: algorithm_benchmark.rs  benchmark.rs  linux_benchmark.rs
report/: main.tex  ppt.tex  references.bib
src/: baseline.rs  lib.rs  optimized.rs  utils.rs  wasm.rs
tests/: integration_tests.rs
www/: README.md  REFACTOR.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  test-local.html  tsconfig.json  vite.config.ts
www/src/: main.ts
www/src/modules/: app.ts  benchmark.ts  converter.ts  utils.ts  visualizer.ts
www/src/styles/: base.css  components.css  layout.css  themes.css
