[package]
name = "fast_base_convert"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance base conversion library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/fast_base_convert"

[dependencies]
tabled = "0.14"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"

[[bench]]
name = "base_convert_bench"
harness = false

[profile.bench]
debug = true