[package]
name = "fast_base_convert"
version = "0.1.0"
edition = "2021"
authors = ["Jinhao Zhang <202483710036@nuist.edu.cn>"]
description = "A high-performance base conversion library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Howardzhangdqs/fast_base_convert"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tabled = "0.14"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
js-sys = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
wasm-bindgen-test = "0.3"

[[bench]]
name = "base_convert_bench"
harness = false

[profile.bench]
debug = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[features]
default = ["console_error_panic_hook"]